# core/model/poll.go
@@ -7,21 +7,49 @@ import (
 
 // PollData data stored for a poll
 type PollData struct {
-	UserID      string    `json:"userid" bson:"userid" validate:"required"`
-	UserName    string    `json:"username" bson:"username" validate:"required"`
-	Question    string    `json:"question" bson:"question" validate:"required"`
-	Options     []string  `json:"options" bson:"options" validate:"required,min=2,dive,required"`
-	GroupID     string    `json:"group_id,omitempty" bson:"group_id"`
-	Pin         int       `json:"pin,omitempty" bson:"pin" validate:"min=0,max=9999"`
-	MultiChoice bool      `json:"multi_choice" bson:"multi_choice"`
-	Repeat      bool      `json:"repeat" bson:"repeat"`
-	ShowResults bool      `json:"show_results" bson:"show_results"`
-	Stadium     string    `json:"stadium" bson:"stadium"`
-	Geo         bool      `json:"geo_fence" bson:"geo_fence"`
-	Status      string    `json:"status" bson:"status" validate:"required,oneof=created started"`
-	DateCreated time.Time `json:"date_created" bson:"date_created"`
-	DateUpdated time.Time `json:"date_updated" bson:"date_updated"`
+	UserID        string     `json:"userid" bson:"userid" validate:"required"`
+	UserName      string     `json:"username" bson:"username" validate:"required"`
+	ToMembersList []ToMember `json:"to_members" bson:"to_members"` // nil or empty means everyone; non-empty means visible to those user ids
+	Question      string     `json:"question" bson:"question" validate:"required"`
+	Options       []string   `json:"options" bson:"options" validate:"required,min=2,dive,required"`
+	GroupID       string     `json:"group_id,omitempty" bson:"group_id"`
+	Pin           int        `json:"pin,omitempty" bson:"pin" validate:"min=0,max=9999"`
+	MultiChoice   bool       `json:"multi_choice" bson:"multi_choice"`
+	Repeat        bool       `json:"repeat" bson:"repeat"`
+	ShowResults   bool       `json:"show_results" bson:"show_results"`
+	Stadium       string     `json:"stadium" bson:"stadium"`
+	Geo           bool       `json:"geo_fence" bson:"geo_fence"`
+	Status        string     `json:"status" bson:"status" validate:"required,oneof=created started"`
+	DateCreated   time.Time  `json:"date_created" bson:"date_created"`
+	DateUpdated   time.Time  `json:"date_updated" bson:"date_updated"`
 } // @name PollData
+
+// UserHasAccess Checks if the user has read and write access to the poll object
+func (pd *PollData) UserHasAccess(userID string) bool {
+
+	if pd.UserID == userID {
+		return true
+	}
+
+	if len(pd.ToMembersList) > 0 {
+		for _, memberDef := range pd.ToMembersList {
+			if memberDef.UserID == userID {
+				return true
+			}
+		}
+		return false
+	}
+
+	return true
+}
+
+// ToMember represents to(destination) member entity
+type ToMember struct {
+	UserID     string `json:"user_id" bson:"user_id"`
+	ExternalID string `json:"external_id" bson:"external_id"`
+	Name       string `json:"name" bson:"name"`
+	Email      string `json:"email" bson:"email"`
+} //@name ToMember
 
 // Poll wraps the entire record
 type Poll struct {
