# docs/swagger.json
@@ -127,6 +127,9 @@
                         "schema": {
                             "$ref": "#/definitions/Poll"
                         }
+                    },
+                    "401": {
+                        "description": ""
                     }
                 }
             },
@@ -164,6 +167,9 @@
                         "schema": {
                             "$ref": "#/definitions/Poll"
                         }
+                    },
+                    "401": {
+                        "description": ""
                     }
                 }
             },
@@ -416,6 +422,13 @@
                         "started"
                     ]
                 },
+                "to_members": {
+                    "description": "nil or empty means everyone; non-empty means visible to those user ids",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/ToMember"
+                    }
+                },
                 "userid": {
                     "type": "string"
                 },
@@ -489,6 +502,13 @@
                         "started"
                     ]
                 },
+                "to_members": {
+                    "description": "nil or empty means everyone; non-empty means visible to those user ids",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/ToMember"
+                    }
+                },
                 "total": {
                     "type": "integer"
                 },
@@ -527,6 +547,23 @@
                     "type": "string"
                 },
                 "userid": {
+                    "type": "string"
+                }
+            }
+        },
+        "ToMember": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "external_id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "user_id": {
                     "type": "string"
                 }
             }
